k8s/kevinryan-io/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kevinryan-io
  namespace: kevinryan-io
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kevinryan-io
  template:
    metadata:
      labels:
        app: kevinryan-io
    spec:
      containers:
        - name: kevinryan-io
          image: kevinryanacr.azurecr.io/kevinryan-io:80b5e42
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 5
          resources:
            requests:
              cpu: 10m
              memory: 16Mi
            limits:
              cpu: 100m
              memory: 64Mi
