k8s/kevinryan-io/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kevinryan-io
  namespace: kevinryan-io
spec:
  selector:
    app: kevinryan-io
  ports:
    - port: 80
      targetPort: 8080
