k8s/kevinryan-io/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kevinryan-io
  namespace: kevinryan-io
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`kevinryan.io`) || Host(`www.kevinryan.io`)
      kind: Rule
      services:
        - name: kevinryan-io
          port: 80
  tls:
    secretName: cloudflare-origin-tls
